packages/aku/src/test-utils/source/__fixtures__/errors/bad-barrel-file-reexport/source.ts
import { BaseClass } from "../../../../../utils.ts";

export class GoodExport extends BaseClass {}

export class Something extends BaseClass {}
